--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "decimal.js": "^10.6.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.552.0",
+        "mermaid": "^11.12.2",
         "prop-types": "^15.8.1",
         "react": "^19.2.0",
         "react-day-picker": "^9.11.1",
