--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,4 +86,4 @@ jobs:
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no \
             ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} \
-            "cd ~/bwh-php && /opt/cpanel/ea-php83/root/usr/bin/php artisan config:clear && /opt/cpanel/ea-php83/root/usr/bin/php artisan config:cache"
+            "cd ~/bwh-php && /opt/cpanel/ea-php83/root/usr/bin/php artisan config:clear && /opt/cpanel/ea-php83/root/usr/bin/php artisan config:cache && cd ~ && rm -rf public_html && rm -rf web && ln -s bwh-php/public public_html && ln -s bwh-php/public web"
