--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "test": "jest"
+        "test": "jest",
+        "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
+        "lint:fix": "eslint . --ext .ts,.tsx --fix"
     },
     "pnpm": {
         "overrides": {
@@ -36,6 +38,12 @@
         "ts-jest": "^29.4.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3",
+        "eslint": "^8.50.0",
+        "@typescript-eslint/parser": "^6.2.0",
+        "@typescript-eslint/eslint-plugin": "^6.2.0",
+        "eslint-plugin-unused-imports": "^3.1.0",
+        "eslint-plugin-simple-import-sort": "^8.0.0",
+        "eslint-import-resolver-typescript": "^6.1.0",
         "vite": "^7.0.7"
     },
     "dependencies": {
