--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "build": "vite build",
         "dev": "vite",
         "test": "jest",
-        "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
-        "lint:fix": "eslint . --ext .ts,.tsx --fix"
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
     },
     "pnpm": {
         "overrides": {
@@ -15,6 +15,7 @@
         }
     },
     "devDependencies": {
+        "@eslint/js": "^9.39.2",
         "@jest/types": "^30.2.0",
         "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.0.0",
@@ -27,7 +28,14 @@
         "@vitejs/plugin-react": "^5.1.0",
         "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
+        "baseline-browser-mapping": "^2.9.19",
         "concurrently": "^9.0.1",
+        "eslint": "^9.39.2",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-unused-imports": "^4.3.0",
+        "globals": "^17.3.0",
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
         "laravel-vite-plugin": "^2.0.0",
@@ -38,12 +46,7 @@
         "ts-jest": "^29.4.6",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3",
-        "eslint": "^8.50.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "eslint-plugin-unused-imports": "^3.1.0",
-        "eslint-plugin-simple-import-sort": "^8.0.0",
-        "eslint-import-resolver-typescript": "^3.1.0",
+        "typescript-eslint": "^8.54.0",
         "vite": "^7.0.7"
     },
     "dependencies": {
