--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "lodash": "^4.17.21",
         "lucide-react": "^0.552.0",
         "mermaid": "^11.12.2",
+        "next-themes": "^0.4.6",
         "prop-types": "^15.8.1",
         "react": "^19.2.0",
         "react-day-picker": "^9.11.1",
